--- a/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
+++ b/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
@@ -23,13 +23,17 @@ Globals.LocalIp = 127.0.0.1
 #Globals.DbType = hsql
 #Globals.UserName=sa
 #Globals.Password=
-Globals.DbType = mysql
-Globals.UserName=egovuser
-Globals.Password=ekgo20ekdks24
+
+#Globals.DbType = mysql
+#Globals.UserName=egovuser
+#Globals.Password=ekgo20ekdks24
+Globals.DbType = cubrid
+Globals.UserName=ptcc
+Globals.Password=ptcc
 
 # mysql
-Globals.DriverClassName=net.sf.log4jdbc.DriverSpy
-Globals.Url=jdbc:log4jdbc:mysql://175.126.111.49:3306/egov_db
+#Globals.DriverClassName=net.sf.log4jdbc.DriverSpy
+#Globals.Url=jdbc:log4jdbc:mysql://175.126.111.49:3306/egov_db
 
 #oracle
 #Globals.DriverClassName=oracle.jdbc.driver.OracleDriver
@@ -44,11 +48,14 @@ Globals.Url=jdbc:log4jdbc:mysql://175.126.111.49:3306/egov_db
 #Globals.Url=jdbc:tibero:thin:@127.0.0.1:1821:egovfrm
 
 #cubrid
-#Globals.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
-#Globals.Url=jdbc:cubrid:127.0.0.1:33000:sht:::?charset=utf-8
+Globals.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
+Globals.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
+
+
 Globals.Softdb.DbType = cubrid
 Globals.Softdb.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
-Globals.Softdb.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
+#Globals.Softdb.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
+Globals.Softdb.Url=jdbc:cubrid:14.52.101.231:30000:ptcc:::?charset=UTF-8
 Globals.Softdb.UserName=ptcc
 Globals.Softdb.Password=ptcc
 
