--- a/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
+++ b/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
@@ -53,7 +53,8 @@ Globals.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
 
 
 Globals.Softdb.DbType = cubrid
-Globals.Softdb.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
+#Globals.Softdb.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
+Globals.Softdb.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 #Globals.Softdb.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
 Globals.Softdb.Url=jdbc:cubrid:14.52.101.231:30000:ptcc:::?charset=UTF-8
 Globals.Softdb.UserName=ptcc
