--- a/SoftdB_pcrm/pom.xml
+++ b/SoftdB_pcrm/pom.xml
@@ -43,16 +43,6 @@
 		</repository>
 		<repository>
 			<id>egovframe</id>
-			<url>http://www.egovframe.go.kr/maven/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-            <id>egovframe2</id>
             <url>http://maven.egovframe.kr:8080/maven/</url>
             <releases>
                 <enabled>true</enabled>
@@ -61,6 +51,10 @@
                 <enabled>false</enabled>
             </snapshots>
         </repository>
+		<repository>
+			<id>cubrid</id>
+			<url>http://maven.cubrid.org/</url>
+		</repository>	
 	</repositories>
 
 	<dependencies>
