운영 환경 세팅

--- a/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
+++ b/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
@@ -19,55 +19,24 @@ Globals.OsType = WINDOWS
 # G4C \uc5f0\uacb0\uc6a9 IP (localhost)
 Globals.LocalIp = 127.0.0.1
 
-# DB\uc11c\ubc84 \ud0c0\uc785(mysql,oracle,altibase,tibero) - datasource \ubc0f sqlMap \ud30c\uc77c \uc9c0\uc815\uc5d0 \uc0ac\uc6a9\ub428
-#Globals.DbType = hsql
-#Globals.UserName=sa
-#Globals.Password=
-
-#Globals.DbType = mysql
-#Globals.UserName=egovuser
-#Globals.Password=ekgo20ekdks24
 Globals.DbType = cubrid
 Globals.UserName=ptcc
 Globals.Password=ptcc
 
-# mysql
-#Globals.DriverClassName=net.sf.log4jdbc.DriverSpy
-#Globals.Url=jdbc:log4jdbc:mysql://175.126.111.49:3306/egov_db
-
-#oracle
-#Globals.DriverClassName=oracle.jdbc.driver.OracleDriver
-#Globals.Url=jdbc:oracle:thin:@127.0.0.1:1521:egovfrm
-
-#Altibase
-#Globals.DriverClassName=Altibase.jdbc.driver.AltibaseDriver
-#Globals.Url=jdbc:Altibase://127.0.0.1:1721/egovfrm?encoding=UTF-8
-
-#Tibero
-#Globals.DriverClassName=com.tmax.tibero.jdbc.TbDriver
-#Globals.Url=jdbc:tibero:thin:@127.0.0.1:1821:egovfrm
-
 #cubrid
 Globals.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
-Globals.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
-
+Globals.Url=jdbc:cubrid:172.17.0.26:33000:ptcc:::?charset=UTF-8
 
 Globals.Softdb.DbType = cubrid
-#Globals.Softdb.DriverClassName=cubrid.jdbc.driver.CUBRIDDriver
 Globals.Softdb.DriverClassName=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#Globals.Softdb.Url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
-Globals.Softdb.Url=jdbc:cubrid:14.52.101.231:30000:ptcc:::?charset=UTF-8
+Globals.Softdb.Url=jdbc:cubrid:172.17.0.26:33000:ptcc:::?charset=UTF-8
 Globals.Softdb.UserName=ptcc
 Globals.Softdb.Password=ptcc
 
-#Hsql - local hssql \uc0ac\uc6a9\uc2dc\uc5d0 \uc801\uc6a9
-#Globals.DriverClassName=net.sf.log4jdbc.DriverSpy
-#Globals.Url=jdbc:log4jdbc:hsqldb:hsql://127.0.0.1/sampledb
-
-# MainPage Setting
 Globals.MainPage = /cmm/main/mainPage.do
 
 #PCRM \ud638\ucd9c \uc8fc\uc18c
-ptcc.pcrm.referer.host=localhost:8080
+#ptcc.pcrm.referer.host=172.17.100.100:8080
+ptcc.pcrm.referer.host=105.7.199.241:9090
 ptcc.pcrm.referer.endUrl=web/civilservice/civilServiceWork.do
 
