--- a/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
+++ b/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
@@ -35,8 +35,9 @@ Globals.Softdb.Password=ptcc
 
 Globals.MainPage = /cmm/main/mainPage.do
 
-#PCRM \ud638\ucd9c \uc8fc\uc18c
-ptcc.pcrm.referer.host1=172.17.100.100:8080
-ptcc.pcrm.referer.host2=105.7.199.241:9090
+#PCRM \ucf5c\uc13c\ud130 \ud638\ucd9c \uc8fc\uc18c
+#ptcc.pcrm.referer.host=172.17.100.100:8080
+#PCRM \ud589\uc815\ub9dd \ud638\ucd9c \uc8fc\uc18c
+ptcc.pcrm.referer.host=105.7.199.241:9090
 ptcc.pcrm.referer.endUrl=web/civilservice/civilServiceWork.do
 
