공무원화면에서 접근가능한 호스트 2개 추가

--- a/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
+++ b/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
@@ -37,6 +37,9 @@ Globals.MainPage = /cmm/main/mainPage.do
 
 #PCRM \ucf5c\uc13c\ud130 \ud638\ucd9c \uc8fc\uc18c
 ptcc.pcrm.referer.host=172.17.100.100:8080
+#PCRM WAS 1.2
+ptcc.pcrm.referer.hostWas1=172.17.100.101:8080
+ptcc.pcrm.referer.hostWas2=172.17.100.102:8080
 #PCRM \ud589\uc815\ub9dd \ud638\ucd9c \uc8fc\uc18c
 ptcc.pcrm.referer.host2=105.7.199.241:9090
 #PCRM local \ud638\ucd9c \uc8fc\uc18c
