개발용 IP 추가

--- a/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
+++ b/SoftdB_pcrm/src/main/resources/egovframework/egovProps/globals.properties
@@ -46,3 +46,10 @@ ptcc.pcrm.referer.host2=105.7.199.241:9090
 ptcc.pcrm.referer.host3=localhost:8080
 ptcc.pcrm.referer.endUrl=web/civilservice/civilServiceWork.do
 
+################################################################################
+#Agent Test DB
+#Globals.Softdb.url=jdbc:cubrid:172.17.0.241:30000:ptcc:::?charset=UTF-8
+#Agent SodtdB
+#Globals.Softdb.url=jdbc:cubrid:14.52.101.231:30000:ptcc:::?charset=UTF-8
+#Agent Aple DB
+Globals.Softdb.Url=jdbc:cubrid:116.123.96.98:53000:ptcc:::?charset=UTF-8
