--- a/SoftdB_pcrm/pom.xml
+++ b/SoftdB_pcrm/pom.xml
@@ -268,6 +268,28 @@
 			<version>${jackson-databind.version}</version>
 		</dependency>
 		
+		<!-- POI -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.9</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>3.9</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>3.9</version>
+			<scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 
     <build>
